# kate-system-2025-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
charts/: Chart.yaml  values.yaml
charts/templates/: deployment.yaml
config/: config.yaml
src/: config.py  conversation_handler.py  error_handler.py  main.py  minio_client.py
